make sure skip link is off-screen

--- a/themes/lazy/assets/css/lazy.scss
+++ b/themes/lazy/assets/css/lazy.scss
@@ -252,7 +252,7 @@ $bottom-space: 26px;
   padding: 1em 2em;
   background-color: $harvard-crimson-red;
   color: #fff;
-  transform: translateY(-100%);
+  transform: translateY(-101%);
 
   &:focus {
     transform: translateY(0);
